// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketList /> should display with default props 1`] = `
<div
  class="d-flex flex-column container"
  style="width: 100%;"
>
  <div>
    ViewTable:
    <div>
      items: 
      []
    </div>
    <div>
      isUpdate: 
      true
    </div>
    <div>
      isSearch: 
      false
    </div>
    <div>
      urlViewId: 
    </div>
    <div>
      ActionsComponent:
      Props:
      <div>
        openMacroModal
      </div>
    </div>
    <div>
      <div>
        CreateTicketButton
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketList /> should render SearchRankProvider on search url 1`] = `
<div
  class="d-flex flex-column container"
  style="width: 100%;"
>
  <div
    data-testid="search-rank-scenario-provider"
  >
    <div>
      ViewTable:
      <div>
        items: 
        []
      </div>
      <div>
        isUpdate: 
        true
      </div>
      <div>
        isSearch: 
        true
      </div>
      <div>
        urlViewId: 
      </div>
      <div>
        ActionsComponent:
        Props:
        <div>
          openMacroModal
        </div>
      </div>
      <div>
        <div>
          CreateTicketButton
        </div>
      </div>
    </div>
  </div>
</div>
`;
